SDSS-478: Fix to the wysiwyg spacing with section background colors (#421)
* SDSS-478: Fixes to the wysiwyg with background colors

* SDSS-478: Moved the max-width to include white backgrounds

* SDSS-478: Updated padding to designer request

--- a/docroot/profiles/sdss/sdss_profile/themes/sdss_subtheme/src/scss/components/row-backgrounds/_row-background-colors.scss
+++ b/docroot/profiles/sdss/sdss_profile/themes/sdss_subtheme/src/scss/components/row-backgrounds/_row-background-colors.scss
@@ -19,6 +19,10 @@
     @include responsive-spacing('padding-bottom', 2);
     @include responsive-spacing('margin-bottom', 2);
   }
+
+  @include grid-media-max('xl') {
+    @include padding(2.6rem);
+  }
 }
 
 .layout-paragraphs-sdss-bgcolor--white {
